added initial revision, commented version_locations

--- a/alembic/alembic.ini
+++ b/alembic/alembic.ini
@@ -24,7 +24,7 @@ script_location = alembic
 # to alembic/versions.  When using multiple version
 # directories, initial revisions must be specified with --version-path
 # version_locations = %(here)s/bar %(here)s/bat alembic/versions
-version_locations = alembic/versions alembic/test_versions
+# version_locations = alembic/versions alembic/test_versions
 
 # the output encoding used when revision files
 # are written from script.py.mako
